@@ -1,70 +1,18 @@
-from flask import Flask, render_template, url_for, redirect, request, jsonify, make_response, send_from_directory, flash
-from module.image_load import *
+from flask import Flask, render_template
 from module.handler_error import genericErrorHandler
-from module.file_checker import *
 from module.secret_gen import final_gen
-import os
+from routes.config_route import configure_route
 
 app = Flask("Memorable Gallery")
 UPLOAD_FOLDER = './static/upload_image'
 app.config['UPLOAD_FOLDER'] = UPLOAD_FOLDER
 app.secret_key = final_gen()
 
-# home
-@app.route("/home")
+@app.route("/")
 def home():
-    return render_template("home.html", home=app.name)
-def redirect_to_home():
-    return redirect("home")
-app.add_url_rule("/", "home", view_func=home)
+    return render_template("home.html", title="Memorable Gallery")
 
-# gallery
-@app.route("/gallery")
-def gallery():
-    path = get_image_path("static/image_class")
-    other_path = get_image_path("static/upload_image")
-    return render_template("gallery.html", img=path+other_path)
-def redirect_to_gallery():
-    return redirect("gallery")
-app.add_url_rule("/","gallery", view_func=gallery)
-
-
-# uploading file but this feature is used by admin only
-@app.route("/upload", methods=["POST", "GET"])
-def upload():
-    default_path ='./static/upload_image/'
-    if request.method == "POST":
-        for imgs_file in request.files.getlist('img_file'):
-            if imgs_file.filename == "":
-                flash("No selected file", "warning")
-                return redirect(url_for('upload'))
-            if check_exist(default_path + imgs_file.filename):
-                flash("File is exists on server", "warning")
-                return redirect(url_for('upload'))
-            else:
-                imgs_file.save(os.path.join(app.config["UPLOAD_FOLDER"], imgs_file.filename))
-                flash("Images uploaded successfully", "success")
-            # print(imgs_file.filename)
-        return redirect(url_for('upload'))
-
-    return render_template('upload.html', files=os.listdir(UPLOAD_FOLDER))
-def redirect_to_upload_file():
-    return redirect("upload")
-app.add_url_rule("/upload","upload", view_func=upload)
-
-@app.route('/download/<filename>')
-def download_file(filename):
-    return send_from_directory(app.config['UPLOAD_FOLDER'], filename)
-
-@app.route('/delete/<filename>', methods=['POST'])
-def delete_file(filename):
-    file_path = os.path.join(app.config['UPLOAD_FOLDER'], filename)
-    if os.path.exists(file_path):
-        os.remove(file_path)
-        flash("File deleted successfully", "success")
-    return redirect(url_for('upload'))
-
-
+configure_route(app)
 # error handlers
 # register error handlers
 for errCode in [400, 401, 403, 404]:
@@ -78,4 +26,4 @@ def serverError(error):
 
 # if run debug mode please replace app.run() by app.run(debug=True)
 if __name__ == "__main__":
-    app.run()
+    app.run(debug=True)
