@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ home }}</title>
+    <title>{{ title }}</title>
     <link
       rel="shortcut icon"
       href="{{ url_for('static', filename='favicon/gallery-32.ico') }}"
