@@ -146,7 +146,7 @@
       >
       <p class="text-gray-600"></p>
       <form
-        action="{{url_for('upload_file')}}"
+        action="{{url_for('upload')}}"
         method="POST"
         enctype="multipart/form-data"
         class="flex flex-col items-center"
