@@ -1,16 +1,28 @@
 {
-    "version": 2.0,
-    "name": "Memorable Gallery",
-    "builds": [
-        {
-            "src": "main.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/main.py"
-        }
-    ]
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "version": 2.0,
+  "name": "Memorable Gallery",
+  "description": "The simple photo gallery website!",
+  "buildCommand": "python main.py",
+  "installCommand": "pip install -r requirements.txt",
+  "cleanUrls": true,
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "static",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ],
+  "redirects": [
+    { "source": "/upload", "destination": "/templates/upload.html", "permanent": false }
+  ]
 }
